# r-type

./: .clang-fornat  .dockerignore  .gitignore  .gitignore.main  .gitmodules  AsioNetworkModule_8hpp_source.html  AssetLoader_8hpp_source.html  AssetManager_8hpp_source.html  Asset_8hpp_source.html  BinaryMessage_8hpp.html  BinaryMessage_8hpp.js  BinaryMessage_8hpp_source.html  BoxComponent_8hpp_source.html  Broker_8hpp.html  Broker_8hpp.js  Broker_8hpp_source.html  Button_8hpp_source.html  CMakeLists.txt  CallBack_8hpp_source.html  CallbackClient_8hpp_source.html  CallbackServer_8hpp_source.html  CameraComponent_8hpp_source.html  CameraSystem_8hpp_source.html  ClientBroker_8hpp.html  ClientBroker_8hpp.js  ClientBroker_8hpp_source.html  ClientCoreModule_8hpp_source.html  Client_8hpp_source.html  Clock_8hpp.html  Clock_8hpp.js  Clock_8hpp_source.html  CollisionSystem_8hpp_source.html  Color_8hpp_source.html  Common_8hpp_source.html  ComponentManager_8hpp_source.html  Component_8hpp_source.html  ConnectionTCP_8hpp_source.html  ConnectionUDP_8hpp_source.html  Consumer_8hpp.html  Consumer_8hpp.js  (+859 more)
.github/workflows/: Mirror.yml  cmake-multi-platform.yml  doxygen.yml
NetworkModule/: CMakeLists.txt
NetworkModule/include/: Client.hpp  ListenerUDP.hpp  Session.hpp
NetworkModule/src/: Client.cpp  ListenerUDP.cpp  Session.cpp
assets/config/: vague_1.json
assets/configs/: vague_1.json
assets/shaders/: model.frag
client/: CMakeLists.txt  main.cpp
client/include/: Asset.hpp  AssetLoader.hpp  AssetManager.hpp  CallbackClient.hpp  Color.hpp  Engine.hpp  Error.hpp  EventManager.hpp  Game.hpp  GameScene.hpp  Keys.hpp  MacGL.hpp  MenuScene.hpp  Rtype.hpp  Scene.hpp  SceneManager.hpp  Shader.hpp  Utils.hpp  Window.hpp  glm.hpp
client/include/ECS/Components/: BoxComponent.hpp  CameraComponent.hpp  HitBoxComponent.hpp  HurtBoxComponent.hpp  ModelComponent.hpp  MotionComponent.hpp  SpriteComponent.hpp
client/include/ECS/Systems/: CameraSystem.hpp  Render2DSystem.hpp  Render3DSystem.hpp
client/include/GUI/: Button.hpp  Component.hpp  Container.hpp  Font.hpp  Interactable.hpp  Manager.hpp  Text.hpp  TextField.hpp
client/include/Game/: Menu.hpp  Rtype.hpp
client/include/Maths/: Matrix.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
client/include/Shapes/: Rectangle.hpp  Shape.hpp  Triangle.hpp
client/include/Sound/: Device.hpp  Playlist.hpp  Sound.hpp
client/include/game/: GameScene.hpp  Rtype.hpp
client/src/: AssetLoader.cpp  AssetManager.cpp  CallbackClient.cpp  Color.cpp  Engine.cpp  EventManager.cpp  Game.cpp  GameScene.cpp  MenuScene.cpp  Rtype.cpp  Scene.cpp  SceneManager.cpp  Shader.cpp  Window.cpp  main.cpp
client/src/ECS/Components/: ModelComponent.cpp  SpriteComponent.cpp
client/src/ECS/Systems/: CameraSystem.cpp  Render2DSystem.cpp  Render3DSystem.cpp
client/src/GUI/: Button.cpp  Container.cpp  Font.cpp  Interactable.cpp  Manager.cpp  Text.cpp  TextField.cpp
client/src/Game/: GameScene.cpp  Menu.cpp  Rtype.cpp  main.cpp
client/src/Shapes/: Rectangle.cpp  Triangle.cpp
client/src/Sound/: Device.cpp  Playlist.cpp  Sound.cpp
client/src/game/: GameScene.cpp  Rtype.cpp  main.cpp
dependencies/zlib-1.3.1/: CMakeLists.txt
graphical/: CMakeLists.txt
graphical/include/: Clock.hpp  Engine.hpp  EventManager.hpp  Keys.hpp  Scene.hpp  SceneManager.hpp  Window.hpp  glm.hpp
graphical/include/GUI/: Component.hpp  Container.hpp  Font.hpp  Manager.hpp  Text.hpp
graphical/include/Maths/: Vector2.hpp
graphical/src/: Clock.cpp  Engine.cpp  EventManager.cpp  Scene.cpp  SceneManager.cpp  Window.cpp  main.cpp
graphical/src/GUI/: Manager.cpp  Text.cpp
include/: CallBack.hpp  Common.hpp  EnumClass.hpp  LoaderLib.hpp  LogDef.hpp  LogOutput.hpp  Logger.hpp  PackUnpack.hpp  ResolvingLib.hpp  ResponsibilityChain.hpp  SenToAllClient.hpp  Utils.hpp  dllDefine.hpp  etibjson.hpp  globalLogger.hpp
include/ECS/: ComponentManager.hpp  ECS.hpp  Ecs.hpp  EntityManager.hpp  SystemManager.hpp  common.hpp
include/interface/: IClient.hpp  INetworkModule.hpp
include/message/: BinaryMessage.hpp  Broker.hpp  ClientBroker.hpp  Consumer.hpp  Message.hpp  Producer.hpp  ServerBroker.hpp  StringMessage.hpp  Topic.hpp
lib/: CMakeLists.txt
lib/AsioNetworkModule/: CMakeLists.txt
lib/AsioNetworkModule/include/: AsioNetworkModule.hpp  Client.hpp  ListenerTCP.hpp  ListenerUDP.hpp  Server.hpp  Session.hpp
lib/AsioNetworkModule/src/: AsioNetworkModule.cpp  Client.cpp  ListenerTCP.cpp  ListenerUDP.cpp  Server.cpp  Session.cpp
lib/ClientCoreModule/: CMakeLists.txt
lib/CoreModule/: CMakeLists.txt
lib/NetworkModule/: CMakeLists.txt
lib/ServerCoreModule/: CMakeLists.txt
lib/TestClientCoreModule/: CMakeLists.txt
lib/TestNetworkModule/: CMakeLists.txt
lib/TestServerCoreModule/: CMakeLists.txt
message/: CMakeLists.txt
message/include/: BinaryMessage.hpp  Broker.hpp  ClientBroker.hpp  Consumer.hpp  Producer.hpp  ServerBroker.hpp  StringMessage.hpp  Topic.hpp
message/src/: BinaryMessage.cpp  Broker.cpp  ClientBroker.cpp  Consumer.cpp  Producer.cpp  ServerBroker.cpp  StringMessage.cpp  Topic.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_15.js  classes_2.js  (+80 more)
server/NetworkModule/: CMakeLists.txt  ConnectionTCP.cpp  ConnectionUDP.cpp  ListenerTCP.cpp  README.md  TCPSession.cpp  module.cpp
server/include/: CallBack.hpp  CallbackServer.hpp  GameClock.hpp  LoaderLib.hpp  PackUnpack.hpp  SenToAllClient.hpp  server.hpp
server/src/: CallbackServer.cpp  LoaderLib.cpp  ResolvingLib.cpp  clock.cpp  compression.cpp  main.cpp  senToAllClient.cpp  server.cpp
src/: CallBack.cpp  LoaderLib.cpp  ResolvingLib.cpp  Utils.cpp  compression.cpp  etibjson.cpp  globalLogger.cpp  senToAllClient.cpp
(+82 files in other folders)
